Removed irrelevant code, fix paths (needs testing)

--- a/ACTeN/asep_demo.ipynb
+++ b/ACTeN/asep_demo.ipynb
@@ -8,20 +8,26 @@
    "source": [
     "import os\n",
     "import sys\n",
+    "\n",
+    "### Problem and ACTeN code imports ###\n",
+    "source_path = os.path.join(\"src/environments/\")\n",
+    "sys.path.insert(0,source_path)\n",
+    "import asep_model as am\n",
+    "source_path = os.path.join(\"src/approximations/\")\n",
+    "sys.path.insert(0,source_path)\n",
+    "import value_mps as vm\n",
+    "import policy_mps_asep as pm\n",
     "source_path = os.path.join(\"src/\")\n",
     "sys.path.insert(0,source_path)\n",
-    "import east_model as em\n",
-    "import value_mps as vm\n",
-    "import policy_mps\n",
-    "import actor_critic_observations as ac\n",
+    "import actor_critic as ac\n",
     "import observations as obs\n",
+    "\n",
+    "### JAX imports ###\n",
     "import jax.numpy as jnp\n",
     "from jax import grad, jit, vmap\n",
     "from jax import random\n",
     "from jax.lax import cond, fori_loop\n",
-    "import numpy as np\n",
-    "# from jax.config import config\n",
-    "# config.update(\"jax_debug_nans\", True)"
+    "import numpy as np"
    ]
   },
   {
@@ -56,19 +62,19 @@
    "source": [
     "obs_func = obs.observation_vec_to_func(\n",
     "\t[obs.average_reward_observation,\n",
-    "\t em.activity_observation, \n",
-    "\t em.kl_divergence_observation],\n",
+    "\t am.current_observation, \n",
+    "\t am.kl_divergence_observation],\n",
     "\t[0, 0.0003, 0.0003]\n",
     ")\n",
     "initial_av_rew = 0.0\n",
     "initial_obs = jnp.array([initial_av_rew, 0.0, 0.0])\n",
     "alg_step = ac.init_actor_critic(\n",
-    "\tem.periodic_reward_func,\n",
-    "\tem.step,\n",
+    "\tam.reward_func,\n",
+    "\tam.step,\n",
     "\tenvironment_args,\n",
     "\tvm.value_scan,\n",
     "\t0.1,\n",
-    "\tpolicy_mps.policy,\n",
+    "\tpm.policy,\n",
     "\t0.1,\n",
     "\t0.001,\n",
     "\tobs_func\n",
@@ -354,11 +360,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "364c811e9c7132b620ae2ea740c69d3c134d9554fc353a9f7ca8861d801e2e6c"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('jax')",
+   "display_name": "Python 3.8.2 ('scipy')",
    "language": "python",
    "name": "python3"
   },
@@ -372,9 +375,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "3e33917057e1ca6039192eee914ba97b20baf8be1a7ca2d20c8eaac302749316"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
