Add more docstrings, upload new ED results

--- a/ACTeN/asep_demo.ipynb
+++ b/ACTeN/asep_demo.ipynb
@@ -72,7 +72,7 @@
     "\tam.reward_func,\n",
     "\tam.step,\n",
     "\tenvironment_args,\n",
-    "\tvm.value_scan,\n",
+    "\tvm.value,\n",
     "\t0.1,\n",
     "\tpm.policy,\n",
     "\t0.1,\n",
